fix security problem

--- a/templates/mp/topic.html
+++ b/templates/mp/topic.html
@@ -95,9 +95,7 @@
 
                     <div class="message-metadata left">
                         <a href="#p{{ post.pk }}" class="date">{{ post.pubdate|naturaltime }}</a>
-                        {% if not post.is_visible %}
-                            <i>Masqué par {{ post.editor }} : {{ post.text_hidden }}</i>
-                        {% elif not post.update = None %}
+                        if not post.update = None %}
                             <i>(Edité {{ post.update|naturaltime }} par {{ post.editor }} )</i>
                         {% endif %}
                     </div>
