--- a/templates/tutorial/history_tutorial.html
+++ b/templates/tutorial/history_tutorial.html
@@ -65,7 +65,7 @@
           <tbody>
             {% for log in logs %}
             <tr>
-              <td><p>{% if tutorial.sha_validation = log.newhexsha %} Validation {% elif tutorial.sha_beta =  log.newhexsha %} Beta {% elif tutorial.sha_draft =  log.newhexsha %} Draft {% endif%}</p></td>
+              <td><p>{% if tutorial.sha_public = log.newhexsha %} - En ligne {% endif%} {% if tutorial.sha_validation = log.newhexsha %} - Validation {% endif%} {% if tutorial.sha_beta =  log.newhexsha %} - Beta {% endif%} {% if tutorial.sha_draft =  log.newhexsha %} - Draft {% endif%}</p></td>
               <td><p>{{ log.time.0|humane_time }}</p></td>
               <td><p><a href="{% url "zds.tutorial.views.view_tutorial" tutorial.pk tutorial.slug %}?version={{ log.newhexsha }}" >{{ log.message }}</a></p></td>
               <td><p><a href="{% url "zds.tutorial.views.diff" tutorial.pk tutorial.slug %}?sha={{ log.newhexsha }}" >{{ log.newhexsha|truncatechars:8 }}</a></p></td>
