add filter in forum

--- a/templates/forum/details.html
+++ b/templates/forum/details.html
@@ -21,7 +21,13 @@
 {% block headline-actions %}
     <h3>Actions</h3>
     <ul>
-        <li><a href="{% url "zds.forum.views.new" %}?forum={{ forum.pk }}" class="ico-after">Nouveau Sujet</a></li>
+        <li><a href="{% url "zds.forum.views.new" %}?forum={{ forum.pk }}" >Nouveau Sujet</a></li>
+    </ul>
+    <h3>Filtres</h3>
+    <ul>
+        <li><a href="{% url "zds.forum.views.details" forum.category.slug forum.slug %}?filter=solve">Tous les sujets</a></li>
+        <li><a href="{% url "zds.forum.views.details" forum.category.slug forum.slug %}?filter=solve">Sujets résolus</a></li>
+        <li><a href="{% url "zds.forum.views.details" forum.category.slug forum.slug %}?filter=unsolve">Sujets non résolus</a></li>
     </ul>    
 {% endblock %}
 
