disallow login member who is inactive

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -530,6 +530,14 @@ h1.forum, h2.forum, h3.forum, h4.forum, h5.forum, h1.member, h2.member, h3.membe
 	padding-top: 20px;
 }
 
+.message-content a{
+	color: #ff8c00;
+}
+
+.message-content a:hover{
+	text-decoration: underline;
+}
+
 .message-forum .message-content p{
 	font-size: 0.9rem;
 }
