improve block display

--- a/templates/source.html
+++ b/templates/source.html
@@ -378,7 +378,7 @@
     </script>
     <script>
     $(".spoiler").on("click", function(){
-        $(".spoiler").children('p').slideToggle("slow");
+        $(".spoiler").children().slideToggle("slow");
     });
     </script>
     <script type="text/javascript" src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
