--- a/assets/scss/_blocs.scss
+++ b/assets/scss/_blocs.scss
@@ -77,21 +77,20 @@ div.question:before {
 }
 
 
-div.spoiler p{
-	border : 1px solid #000;
-	border-top: transparent;
+div.spoiler {
 	background-color: #333;
-	padding : 1rem;
+}
+div.spoiler > *{
 	color : #FFF;
 	display: none;
 }
 
 div.spoiler:before {
 	cursor: pointer;
+	background-color: #CCC;
 	width: 100%;
-	height: 30px;
-	border : 1px solid #000;
-	content: "Cliquez dans cette zone pour lire le message";
+	padding: 10px;
+	content: "Cliquez pour lire le message";
 	font-size: 12px;
 	vertical-align: middle;
 	background-position: center center;
