--- a/assets/scss/_blocs.scss
+++ b/assets/scss/_blocs.scss
@@ -37,7 +37,7 @@ div:not(.alert-box).warning:before {
 	display: block;
 }
 
-div:not(.alert-box).error p{
+*:not(form) > div:not(.alert-box).error p{
 	border : 1px solid #6B0D0D;
 	border-top: transparent;
 	background-color: #F7230C;
@@ -45,7 +45,7 @@ div:not(.alert-box).error p{
 	padding : 1rem;
 }
 
-div:not(.alert-box).error:before {
+*:not(form) > div:not(.alert-box).error:before {
 	width: 100%;
 	height: 30px;
 	border : 1px solid #6B0D0D;
