--- a/templates/member/token_account_failed.html
+++ b/templates/member/token_account_failed.html
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="large-12 columns">
         <p>
-            Désolé, votre de jeton de confirmation a expiré, vous devez vous <a href="{% url "zds.member.views.register_view" %}">réinscrire</a>.
+            Désolé, votre de jeton de confirmation a expiré. Vous pouvez cependant le regénerer, pour cela, cliquer sur ce lien suivant: <a href="{% url "zds.member.views.generate_token_account" %}?token={{token.token}}">envoi de jeton</a>.
         </p>
     </div>
 </div>
