add mail/mp for abn/register

--- a/templates/member/token_account_success.html
+++ b/templates/member/token_account_success.html
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="large-12 columns">
         <p>
-            Vous avez confirmé votre email sur le site. <a href="{% url "zds.member.views.details" user.username %}">Voir votre profil</a>.
+            Vous avez confirmé votre email sur le site. <a href="{% url "zds.member.views.details" usr.username %}">Voir votre profil</a>.
         </p>
         <p>
             Vous pouvez maintenant poster des messages sur le site.
