--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -38,7 +38,7 @@
     <table class="topics-entries">
       <tbody>
         {% for topic in privatetopics %}
-            {% include "forum/details_row.part.html" %}
+            {% include "mp/details_row.part.html" %}
         {% endfor %}
       </tbody>
     </table>
