--- a/templates/mp/post/new.html
+++ b/templates/mp/post/new.html
@@ -36,7 +36,7 @@
         </div>
     {% endif %}
 
-    {% crispy form %}
+    {% include "misc/message_form.html" with member=user %}
 
     {% if form.text.value %}
         {% include "misc/previsualization.part.html" with text=form.text.value %}
