--- a/templates/mp/topic/new.html
+++ b/templates/mp/topic/new.html
@@ -23,7 +23,7 @@
 
 
 {% block content %}
-    {% crispy form %}
+    {% include "misc/message_form.html" with member=user %}
 
     {% if form.text.value %}
         {% include "misc/previsualization.part.html" with text=form.text.value %}
