--- a/assets/scss/_blocs.scss
+++ b/assets/scss/_blocs.scss
@@ -1,81 +1,86 @@
-div.information p{
+div.information{
 	border : 1px solid #6ab0de;
-	border-top: transparent;
 	background-color: #e7f2fa;
-	padding : 1rem;
+}
+
+div.information > *{
+	padding : 0.6rem;
 }
 
 div.information:before {
 	width: 100%;
 	height: 30px;
-	border: 1px solid #6ab0de;
-	border-bottom: transparent;
+	border-bottom: 1px solid #FFF;
 	content: "";
 	background-position: center center;
 	background-image: url('../img/information.png');
+	background-color: #FFF;
 	background-repeat: no-repeat;
 	display: block;
 }
 
-
-div:not(.alert-box).warning p{
+div:not(.alert-box).warning{
 	border : 1px solid #f0b37e;
-	border-top: transparent;
 	background-color: #ffedcc;
-	padding : 1rem;
+}
+
+div:not(.alert-box).warning > *{
+	padding : 0.6rem;
 }
 
 div:not(.alert-box).warning:before {
 	width: 100%;
 	height: 30px;
-	border : 1px solid #f0b37e;
-	border-bottom: transparent;
+	border-bottom: 1px solid #FFF;
 	content: "";
 	background-position: center center;
 	background-image: url('../img/warning.png');
+	background-color: #FFF;
 	background-repeat: no-repeat;
 	display: block;
 }
 
-*:not(form) > div:not(.alert-box).error p{
+*:not(form) > div:not(.alert-box).error{
 	border : 1px solid #6B0D0D;
-	border-top: transparent;
 	background-color: #F7230C;
-	color : #FFF;
-	padding : 1rem;
+}
+
+*:not(form) > div:not(.alert-box).error > *{
+	padding : 0.6rem;
 }
 
 *:not(form) > div:not(.alert-box).error:before {
 	width: 100%;
 	height: 30px;
-	border : 1px solid #6B0D0D;
-	border-bottom: transparent;
+	border-bottom: 1px solid #FFF;
 	content: "";
 	background-position: center center;
 	background-image: url('../img/error.png');
+	background-color: #FFF;
 	background-repeat: no-repeat;
 	display: block;
 }
 
-div.question p{
+div.question{
 	border : 1px solid #DF73FF;
-	border-top: transparent;
 	background-color: #DF73FF;
-	padding : 1rem;
+}
+
+div.question > *{
+	padding : 0.6rem;
 }
 
 div.question:before {
 	width: 100%;
 	height: 30px;
-	border : 1px solid #DF73FF;
-	border-bottom: transparent;
+	border-bottom: 1px solid #FFF;
 	content: "";
 	background-position: center center;
 	background-image: url('../img/question.png');
+	background-color: #FFF;
 	background-repeat: no-repeat;
 	display: block;
 }
-
 
 div.spoiler {
 	background-color: #333;
