--- a/templates/article/find_article.html
+++ b/templates/article/find_article.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block head-title %}
-    Articles rédigés par "{{ usr.username }}""
+    Articles rédigés par "{{ usr.username }}"
 {% endblock %}
 
 {% block breadcrumb %}
