--- a/templates/tutorial/find_tutorial.html
+++ b/templates/tutorial/find_tutorial.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block head-title %}
-    Tutoriels rédigés par {{ usr.username }}"
+    Tutoriels rédigés par "{{ usr.username }}"
 {% endblock %}
 
 {% block breadcrumb %}
