--- a/templates/tutorial/find_betatutorial.html
+++ b/templates/tutorial/find_betatutorial.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block head-title %}
-    Tutoriels en Beta rédigés par {{ usr.username }}"
+    Tutoriels en Beta rédigés par "{{ usr.username }}"
 {% endblock %}
 
 {% block breadcrumb %}
