--- a/templates/mp/details_row.part.html
+++ b/templates/mp/details_row.part.html
@@ -8,7 +8,10 @@
             read
         {% endif %}
     {% endif %}">
-    <td> 
+    <td>
+        <input type="checkbox" name="check" value={{topic.pk}} />
+    </td>
+    <td>
         <span class="{% if topic.is_locked %}forum-entry-locked{% endif %}">
         </span>
         <span class="{% if topic.is_solved %}forum-entry-solved{% endif %}">
@@ -27,7 +30,7 @@
              {% include "member/member_item_common.part.html" %}
         {% endwith %}
         {% for part in topic.participants.all %}
-            {% with member=topic.author %}
+            {% with member=part %}
                  | {% include "member/member_item_common.part.html" %}
             {% endwith %}
         {% endfor %}
